--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "mantine-vite-template",
-  "private": true,
+  "name": "mantine-notifications-issue",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -19,8 +18,10 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.6.1",
-    "@mantine/hooks": "7.6.1",
+    "@mantine/core": "7.7.1",
+    "@mantine/hooks": "7.7.1",
+    "@mantine/notifications": "^7.7.1",
+    "@tabler/icons-react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
